--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-the dotfiles directory should be .dotfiles
-make sure to move the dotfiles into .dotfiles before running setup.sh
+the dotfiles directory should be $HOME/github/dotfiles
+make sure to move the dotfiles into $HOME/github/dotfiles before running setup.sh
 else, it will delete all your files
